# commonmark-hs

./: .gitignore  .travis.yml  Makefile  README.md  TODO.org  cabal.project  commonmark.cabal  hie.yaml  stack.yaml
.circleci/: config.yml
.github/workflows/: ci.yml
app/: convert.hs  highlight.hs
benchmark/: benchmark.hs  sample.md
commonmark/: README.md  changelog.md  commonmark.cabal
commonmark-cli/: README.md  changelog.md  commonmark-cli.cabal
commonmark-cli/src/: convert.hs
commonmark-core/: commonmark-core.cabal
commonmark-core/src/: Commonmark.hs
commonmark-core/src/Commonmark/: Blocks.hs  Entity.hs  HTML.hs  Html.hs  Inlines.hs  ReferenceMap.hs  SourceMap.hs  Tag.hs  Types.hs  Util.hs
commonmark-core/src/Commonmark/Extensions/: Math.hs  PipeTable.hs  Strikethrough.hs
commonmark-core/test/: autolinks.txt  pipe-tables.txt  test-commonmark-core.hs  test-commonmark.hs
commonmark-extensions/: README.md  changelog.md  commonmark-extensions.cabal
commonmark-extensions/benchmark/: benchmark.hs
commonmark-extensions/src/Commonmark/: Extensions.hs
commonmark-extensions/src/Commonmark/Extensions/: Alerts.hs  Attributes.hs  AutoIdentifiers.hs  Autolink.hs  Citations.hs  DefinitionList.hs  Emoji.hs  FancyList.hs  Footnote.hs  HardLineBreaks.hs  ImplicitHeadingReferences.hs  Math.hs  PipeTable.hs  RebaseRelativePaths.hs  Smart.hs  Strikethrough.hs  Subscript.hs  Superscript.hs  TaskList.hs  Wikilinks.hs
commonmark-extensions/test/: alerts.md  attributes.md  auto_identifiers.md  auto_identifiers_ascii.md  autolinks.md  bracketed_spans.md  definition_lists.md  example_lists.md  fancy_lists.md  fenced_divs.md  footnotes.md  hard_line_breaks.md  implicit_heading_references.md  math.md  pipe_tables.md  raw_attribute.md  rebase_relative_paths.md  smart.md  superscript.md  task-lists.md  task_lists.md  test-commonmark-extensions.hs  wikilinks.md  wikilinks_title_after_pipe.md  wikilinks_title_before_pipe.md
commonmark-lucid/: README.md  commonmark-lucid.cabal
commonmark-lucid/src/Commonmark/: Lucid.hs
commonmark-lucid/test/: test-commonmark-lucid.hs
commonmark-pandoc/: README.md  changelog.md  commonmark-pandoc.cabal
commonmark-pandoc/src/Commonmark/: Pandoc.hs
commonmark/benchmark/: benchmark.hs
commonmark/src/: Commonmark.hs
commonmark/src/Commonmark/: Attributes.hs  Blocks.hs  Entity.hs  Html.hs  HtmlMod.hs  Inlines.hs  Nodes.hs  Parsec.hs  Parser.hs  ParserCombinators.hs  ReferenceMap.hs  SourceMap.hs  Syntax.hs  Tag.hs  TokParsers.hs  Tokens.hs  Types.hs  Util.hs
commonmark/src/Commonmark/Extensions/: Attributes.hs  AutoIdentifiers.hs  Autolink.hs  DefinitionList.hs  Emoji.hs  FancyList.hs  Footnote.hs  ImplicitHeaderReferences.hs  ImplicitHeadingReferences.hs  Math.hs  PipeTable.hs  Smart.hs  Strikethrough.hs  Subscript.hs  Superscript.hs
commonmark/test/: attributes.md  attributes.txt  auto_identifiers.txt  autolinks.txt  bracketed_spans.txt  cmark-gfm-extensions.txt  definition-list.txt  emoji.txt  fancy_lists.md  fenced_code_attributes.txt  fenced_divs.md  fenced_divs.txt  footnotes.txt  heading_attributes.txt  implicit_heading_references.txt  inline_code_attributes.txt  link_attributes.txt  pipe-tables.txt  regression.md  regression.txt  strikethrough.txt  subscript.txt  superscript.txt  test-commonmark.hs  texmath.txt
src/: Commonmark.hs
src/Commonmark/: Inlines.hs  ReferenceMap.hs  SourceMap.hs  Syntax.hs  Types.hs
src/Commonmark/Extensions/: PipeTable.hs  Smart.hs  Strikethrough.hs
test/: pipe-tables.txt  spec.txt  test-commonmark.hs
