name:           commonmark-cli
version:        0.1.0.0
synopsis:       Command-line commonmark converter and highlighter.
description:    This package provides a command-line tool, `commonmark`,
                for converting and syntax-highlighting commonmark documents.
homepage:       https://github.com/jgm/commonmark-hs
bug-reports:    https://github.com/jgm/commonmark-hs/issues
author:         John MacFarlane
maintainer:     jgm@berkeley.edu
copyright:      2018 John MacFarlane
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    changelog.md
    README.md

source-repository head
  type: git
  location: https://github.com/jgm/commonmark-hs

executable commonmark
  main-is: convert.hs
  hs-source-dirs: src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , commonmark
    , lucid
    , containers
    , pretty-simple
    , bytestring
    , mtl
    , text
    , ansi-terminal >= 0.7
  other-modules:
      Paths_commonmark_cli
  default-language: Haskell2010
