name:           commonmark-cli
version:        0.1.0.1
synopsis:       Command-line commonmark converter and highlighter.
description:    This package provides a command-line tool, `commonmark`,
                for converting and syntax-highlighting commonmark documents.
category:       Text
homepage:       https://github.com/jgm/commonmark-hs
bug-reports:    https://github.com/jgm/commonmark-hs/issues
author:         John MacFarlane
maintainer:     jgm@berkeley.edu
copyright:      2018-2020 John MacFarlane
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    changelog.md
    README.md

source-repository head
  type: git
  location: https://github.com/jgm/commonmark-hs

executable commonmark
  main-is: convert.hs
  hs-source-dirs: src
  if impl(ghc >= 8.8)
    ghc-options:  -fwrite-ide-info -hiedir=.hie
  ghc-options: -threaded -rtsopts
  build-depends: base >= 4.9 && <5
               , commonmark >= 0.1 && < 0.2
               , commonmark-extensions >= 0.1 && < 0.3
               , commonmark-pandoc >= 0.1 && < 0.3
               , pandoc-types
               , aeson
               , bytestring
               , containers
               , pretty-simple
               , mtl
               , bytestring
               , text
               , ansi-terminal
  other-modules:
      Paths_commonmark_cli
  default-language: Haskell2010
