name:           commonmark-extensions
version:        0.2.5.5
synopsis:       Pure Haskell commonmark parser.
description:
   This library provides some useful extensions to core commonmark
   syntax: smart quotes, definition lists, tables, footnotes, math,
   and more.

category:       Text
homepage:       https://github.com/jgm/commonmark-hs
bug-reports:    https://github.com/jgm/commonmark-hs/issues
author:         John MacFarlane
maintainer:     jgm@berkeley.edu
copyright:      2018-2021 John MacFarlane
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    changelog.md
    README.md
    test/definition_lists.md
    test/fancy_lists.md
    test/alerts.md
    test/autolinks.md
    test/auto_identifiers.md
    test/auto_identifiers_ascii.md
    test/implicit_heading_references.md
    test/pipe_tables.md
    test/attributes.md
    test/wikilinks_title_before_pipe.md
    test/wikilinks_title_after_pipe.md
    test/raw_attribute.md
    test/fenced_divs.md
    test/bracketed_spans.md
    test/footnotes.md
    test/math.md
    test/emoji.md
    test/smart.md
    test/rebase_relative_paths.md
    test/strikethrough.md
    test/superscript.md
    test/subscript.md
    test/hard_line_breaks.md
    test/task_lists.md

source-repository head
  type: git
  location: https://github.com/jgm/commonmark-hs

library
  hs-source-dirs:
      src
  build-depends:
      base >= 4.9 && <5
    , text
    , parsec
    , containers
    , transformers
    , filepath
    , network-uri
    , commonmark >= 0.2.4.1 && < 0.3
    -- for extensions:
    , emojis >= 0.1.4.1 && < 0.2
  exposed-modules:
      Commonmark.Extensions
      Commonmark.Extensions.Smart
      Commonmark.Extensions.HardLineBreaks
      Commonmark.Extensions.Strikethrough
      Commonmark.Extensions.Superscript
      Commonmark.Extensions.Subscript
      Commonmark.Extensions.PipeTable
      Commonmark.Extensions.Math
      Commonmark.Extensions.Emoji
      Commonmark.Extensions.Autolink
      Commonmark.Extensions.Footnote
      Commonmark.Extensions.DefinitionList
      Commonmark.Extensions.Attributes
      Commonmark.Extensions.AutoIdentifiers
      Commonmark.Extensions.FancyList
      Commonmark.Extensions.TaskList
      Commonmark.Extensions.ImplicitHeadingReferences
      Commonmark.Extensions.RebaseRelativePaths
      Commonmark.Extensions.Wikilinks
      Commonmark.Extensions.Alerts
  ghc-options: -Wall -fno-warn-unused-do-bind -funbox-small-strict-fields
  if impl(ghc >= 8.10)
    ghc-options:      -Wunused-packages
  if impl(ghc >= 8.8)
    ghc-options:  -fwrite-ide-info -hiedir=.hie
  default-language: Haskell2010

test-suite test-commonmark-extensions
  type: exitcode-stdio-1.0
  main-is: test-commonmark-extensions.hs
  hs-source-dirs:
      test
  if impl(ghc >= 8.10)
    ghc-options:      -Wunused-packages
  ghc-options: -threaded -rtsopts -with-rtsopts=-K40K
  build-depends:
      base >= 4.9 && <5
    , commonmark >= 0.2.4.1 && < 0.3
    , commonmark-extensions
    , text
    , tasty
    , tasty-hunit
    , parsec
  default-language: Haskell2010

benchmark benchmark-commonmark-extensions
  type:            exitcode-stdio-1.0
  main-is:         benchmark.hs
  hs-source-dirs:  benchmark
  build-depends:
       commonmark >= 0.2.4.1 && < 0.3
     , commonmark-extensions
     , base >= 4.9 && < 5
     , text
     , tasty-bench
  if impl(ghc >= 8.10)
    ghc-options:      -Wunused-packages
  ghc-options: -threaded -rtsopts -with-rtsopts=-K10K
  default-language: Haskell2010
