name:           commonmark-lucid
version:        0.1.0.0
synopsis:       Lucid renderer for commonmark parser.
description:
homepage:       https://github.com/jgm/commonmark-hs
bug-reports:    https://github.com/jgm/commonmark-hs/issues
author:         John MacFarlane
maintainer:     jgm@berkeley.edu
copyright:      2018 John MacFarlane
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    changelog.md
    README.md

source-repository head
  type: git
  location: https://github.com/jgm/commonmark-hs

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , commonmark-core
    , lucid
    , text
    , containers
    , case-insensitive
    , transformers
    , parsec
    , tagsoup
    , network-uri
  if !impl(ghc >= 8.0)
    build-depends: semigroups == 0.18.*
  exposed-modules:
      Commonmark.Lucid
  ghc-options: -Wall -fno-warn-unused-do-bind
  default-language: Haskell2010

test-suite test-commonmark-lucid
  type: exitcode-stdio-1.0
  main-is: test-commonmark-lucid.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-K5K
  build-depends:
      base >=4.7 && <5
    , commonmark-core
    , commonmark-lucid
    , tasty
  default-language: Haskell2010

