name:           commonmark-pandoc
version:        0.2.1.2
synopsis:       Bridge between commonmark and pandoc AST.
description:    This library provides typeclasses for rendering
                commonmark to Pandoc types.
category:       Text
homepage:       https://github.com/jgm/commonmark-hs
bug-reports:    https://github.com/jgm/commonmark-hs/issues
author:         John MacFarlane
maintainer:     jgm@berkeley.edu
copyright:      2018-2021 John MacFarlane
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    changelog.md
    README.md

source-repository head
  type: git
  location: https://github.com/jgm/commonmark-hs

library
  hs-source-dirs:
      src
  build-depends:
      base >= 4.9 && <5
    , commonmark >= 0.2 && < 0.3
    , commonmark-extensions >= 0.2.1 && < 0.3
    , pandoc-types >= 1.21 && < 1.23
    , text
  if impl(ghc >= 8.10)
    ghc-options:      -Wunused-packages
  if impl(ghc >= 8.8)
    ghc-options:  -fwrite-ide-info -hiedir=.hie
  exposed-modules:
      Commonmark.Pandoc
  ghc-options: -Wall -fno-warn-unused-do-bind
  default-language: Haskell2010
