cabal-version:  2.2
name:           commonmark
version:        0.2.2
synopsis:       Pure Haskell commonmark parser.
description:
   This library provides the core data types and functions
   for parsing commonmark (<https://spec.commonmark.org>).
   The parser is fully commonmark-compliant and passes the test
   suite.  It is designed to be customizable and easily extensible.
   To customize the output, create an AST, or support a new output
   format, one need only define some new typeclass instances.
   It is also easy to add new syntax elements or modify existing ones.
   .
   Accurate information about source positions is available
   for all block and inline elements.  Thus the library can be
   used to create an accurate syntax highlighter or
   an editor with live preview.
   .
   The parser has been designed for robust performance
   even in pathological cases that tend to cause stack overflows or
   exponential slowdowns in other parsers, with parsing speed that
   varies linearly with input length.
   .
   Related packages:
   .
   - commonmark-extensions (which defines a number of syntax extensions)
   - commonmark-pandoc (which allows using this parser to create a Pandoc
     structure)
   - commonmark-cli (a command-line tool for converting and
     syntax-highlighting commonmark documents)

homepage:       https://github.com/jgm/commonmark-hs
category:       Text
bug-reports:    https://github.com/jgm/commonmark-hs/issues
stability:      experimental
author:         John MacFarlane
maintainer:     jgm@berkeley.edu
copyright:      2018-2021 John MacFarlane
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    changelog.md
    README.md
    test/spec.txt
    test/regression.md

source-repository head
  type: git
  location: https://github.com/jgm/commonmark-hs

library
  hs-source-dirs:
      src
  build-depends:
      base >= 4.9 && <5
    , text
    , bytestring
    , containers
    , transformers
    , parsec
    , unicode-transforms
    , unicode-data >= 0.3
  exposed-modules:
      Commonmark
      Commonmark.Parser
      Commonmark.Types
      Commonmark.Html
      Commonmark.Syntax
      Commonmark.ReferenceMap
      Commonmark.Tokens
      Commonmark.Inlines
      Commonmark.Blocks
      Commonmark.TokParsers
      Commonmark.SourceMap
      Commonmark.Tag
      Commonmark.Entity
  if impl(ghc >= 8.10)
    ghc-options:      -Wunused-packages
  if impl(ghc >= 8.8)
    ghc-options:  -fwrite-ide-info -hiedir=.hie
  ghc-options: -Wall -fno-warn-unused-do-bind -funbox-small-strict-fields
  default-language: Haskell2010
  other-extensions: StrictData

test-suite test-commonmark
  type: exitcode-stdio-1.0
  main-is: test-commonmark.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-K40K
  if impl(ghc >= 8.10)
    ghc-options:      -Wunused-packages
  build-depends:
      base >= 4.9 && <5
    , commonmark
    , text
    , unicode-transforms
    , tasty
    , tasty-quickcheck
    , tasty-hunit
    , parsec
  default-language: Haskell2010

benchmark benchmark-commonmark
  type:            exitcode-stdio-1.0
  main-is:         benchmark.hs
  hs-source-dirs:  benchmark
  build-depends:
       commonmark
     , base >= 4.9 && < 5
     , text
     , tasty-bench
  ghc-options: -threaded -rtsopts -with-rtsopts=-K10K
  if impl(ghc >= 8.10)
    ghc-options:      -Wunused-packages
  default-language: Haskell2010
